<!--
    My Notie is a note taking app, write notes and save them to see them and remember later.
    Copyright (C) 2021  Ioannis Xenakis

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.

    Anything you want to contact me for, contact me with an e-mail, at: Xenakis.i.Contact@gmail.com
    I'll be happy to help you, or discuss anything with you! -->

<resources>
    <string name="app_name">My Notie</string>
    <string name="search_button">Search notes.</string>
    <string name="content_description_search">Search button</string>
    <string name="check_notes_button">Check notes.</string>
    <string name="content_description_check_notes">Check notes button</string>
    <string name="note_title">This is a new note. This is a new note. This is a new note. This is a new note. This is a new note. </string>
    <string name="note_body_text">This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text. This is Body Text.</string>
    <string name="note_date_text">Last edited: Jul/13/2020</string>
    <string name="page_title">My notes</string>
    <string name="search_edittext_hint">Search here</string>
    <string name="notes_selected">0 notes selected</string>
    <string name="select_all_notes_button">Select all notes.</string>
    <string name="content_description_select_all_notes">Select all notes.</string>
    <string name="delete_selected_notes_button">Delete selected notes.</string>
    <string name="content_description_delete_selected_notes">Delete selected notes.</string>
    <string name="add_to_folder_button">Add to folder</string>
    <string name="delete_note_button">Delete note</string>
    <string name="content_description_select_notes_navigation">Close select notes toolbar</string>
    <string name="all_notes">All notes</string>
    <string name="my_folders">My folders</string>
    <string name="my_folder_1">My folder 1</string>
    <string name="my_folder_2">My folder 2</string>
    <string name="my_folder_3">My folder 3</string>
    <string name="my_folder_4">My folder 4</string>
    <string name="add_or_manage_folders">Add or manage folders</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="content_description_app_logo">My Notie</string>
    <string name="content_description_add_new_note">Add new note</string>
    <string name="note_title_hint">Title</string>
    <string name="content_description_note_title_clear_text_button">clear note title text</string>
    <string name="content_description_note_body_text_clear_text_button">clear note body text</string>
    <string name="note_body_text_hint">Note</string>
    <string name="page_title_edit_note">Edit note</string>
    <string name="content_description_edit_note_navigation">Go back</string>
    <string name="content_description_add_to_folders_button">Add to folders.</string>
    <string name="add_to_folder_button_edit_note">Add to folders.</string>
    <string name="revert_changes_button_edit_note">Revert changes</string>
    <string name="delete_note_button_edit_note">Delete note</string>
    <string name="tooltip_add_new_note">Add new note.</string>
    <string name="page_title_add_or_manage_folders">Manage folders</string>
    <string name="content_description_manage_folders_navigation">Go back.</string>
    <string name="content_description_add_new_folder_button">Add new folder.</string>
    <string name="name_new_folder_edittext_hint">Name new folder.</string>
    <string name="content_description_name_new_folder_clear_button">Clear name new folder edittext text.</string>
    <string name="content_description_reject_new_folder_button">Reject adding new folder.</string>
    <string name="content_description_accept_new_folder_button">Accept and add new folder.</string>
    <string name="content_description_manage_folders_delete_folder">Delete folder.</string>
    <string name="folder_name_hint_manage_folders">Folder name.</string>
    <string name="content_description_manage_folders_cancel_renaming_folder">Cancel renaming folder.</string>
    <string name="content_description_manage_folders_folder_list">Folder list.</string>
    <string name="page_title_add_to_folders">Add to folders</string>
    <string name="content_description_add_to_folders_navigation">Go back.</string>
    <string name="content_description_add_to_folders_folder_list">Folder list.</string>
    <string name="folder_name_hint_add_to_folders">Folder name.</string>
    <string name="content_description_add_to_folders_cancel_renaming_folder">Cancel renaming folder button.</string>
    <string name="content_description_add_to_folders_accept_renaming_folder">Accept renaming folder.</string>
    <string name="content_description_note_more_menu_button">More menu button</string>

</resources>